--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
 
-    compile 'com.airbnb.android:epoxy:1.5.0'
+//    compile 'com.airbnb.android:epoxy:1.5.0'
     annotationProcessor 'com.airbnb.android:epoxy-processor:1.5.0'
 
     compile 'com.android.support:cardview-v7:24.2.1'
+    compile project(path: ':epoxy-adapter')
 }
